新闻公告审核

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,11 +15,11 @@ swhy:
 
     # 图片上传地址 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
   #地址前缀
-  uploadPath: /opt/mager/upload/
+  #uploadPath: /opt/mager/upload/
   #图片地址
-  profile: images
+  #profile: images
     #附件上传地址
-  accessory: accessory
+  #accessory: accessory
   # 获取ip地址开关
   addressEnabled: false
 
