--- a/src/main/resources/uploadController.properties
+++ b/src/main/resources/uploadController.properties
@@ -1,9 +1,11 @@
 #总路径
 #生产环境
-uploadPath=/opt/mager/upload/
+#uploadPath=/opt/mager/upload/
 #测试环境
-#uploadPath=d:/
+uploadPath=d:/
 #图片地址
 profile=images
 #附件地址
 accessory=accessory
+#软件地址
+software=software
