提交软件下载

--- a/src/main/resources/application-business.yml
+++ b/src/main/resources/application-business.yml
@@ -6,7 +6,7 @@ file:
   uploadPath: d:/
   # 图片目录
   profile:  images
-  # 附件地址
+  # 附件地址+
   accessory:  accessory
   #安装文件上传地址
   software: software
