--- a/src/main/resources/application-druid.yml
+++ b/src/main/resources/application-druid.yml
@@ -12,10 +12,17 @@ spring:
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
-                enabled: false
-                url: 
-                username: 
-                password: 
+                enabled: true
+                url: jdbc:oracle:thin:@192.168.27.47:1521/helowin
+                username: swhysc_log
+                password: password
+            # 从库数据源
+            swhybase:
+                # 从数据源开关/默认关闭
+                enabled: true
+                url: jdbc:oracle:thin:@192.168.27.47:1521/helowin
+                username: swhysc_base
+                password: password
             # 初始连接数
             initialSize: 5
             # 最小连接池数量
