--- a/src/main/resources/application-business.yml
+++ b/src/main/resources/application-business.yml
@@ -2,8 +2,8 @@
 # 文件上传下载地址
 file:
   # 服务器默认上传路径
-  uploadPath: /opt/mager/upload/Y
-  #uploadPath: d:/
+  #uploadPath: /opt/mager/upload/
+  uploadPath: d:/
   # 图片目录
   profile:  images
   # 附件地址
